<resources>
    <string name="app_name">GitSurf</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_with_github">Sign in with GitHub</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This name or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_failed_get_access_token">Failed to get access token</string>
    <string name="error_unknown_host">Please verify you have a working network connection and try again;</string>
    <string name="retry">Retry</string>
    <string name="back_button_to_exit">Press back again to quit the application.</string>
    <string name="menu_follow">Follow</string>
    <string name="menu_unfollow">Unfollow</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_star">Star</string>
    <string name="menu_fork">Fork</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_watch">Watch</string>
    <string name="menu_unwatch">Unwatch</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_news">News</string>
    <string name="menu_my_repo">Your repositories</string>
    <string name="menu_my_starred">Your stars</string>
    <string name="menu_my_issues">Your issues</string>
    <string name="menu_my_pull_request">Your pull requests</string>
    <string name="menu_my_gists">Your Gists</string>
    <string name="menu_public_repos">Repositories</string>
    <string name="menu_users">Users</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_public_search">Public</string>
    <string name="load_auth_failure_notice">Your authentication credentials aren\'t valid anymore, please log in again.</string>
    <string name="user_registered">Registered: %1$s</string>
    <string name="user_repositories">Repositories: %1$d</string>
    <string name="user_orgs">Organizations</string>
    <string name="user_starred">Starred</string>
    <string name="user_members">Members</string>
    <string name="user_public_activity_title">%1$s activity</string>
    <string name="repos_list_title">%1$s`s repositories</string>
    <string name="starred_list_title">%1$s`s starred</string>
    <string name="public_activity_title">Public activity</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="orgs_title">Organizations</string>
    <string name="members_title">Members</string>
    <string name="user_gists_title">%s`s gists</string>
    <string name="my_repo_title">My repositories</string>
    <string name="my_stars_title">My stars</string>
    <string name="my_gists_title">My gists</string>
    <string name="users_search_title">User search</string>
    <string name="search_repos_title">Repository search</string>
    <string name="login_title">Login</string>
    <string name="my_issues_title">My Issues</string>
    <string name="news_title">News</string>
    <string name="list_empty">Empty.</string>
    <string name="deleted">[deleted]</string>
    <string name="event_commit_comment_title">Commented on commit &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_create_repo_title">Created a repository &lt;b>%1$s&lt;/b></string>
    <string name="event_create_branch_title">Created branch &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_create_tag_title">Created tag &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_delete_branch_title">Deleted branch &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_delete_tag_title">Deleted tag &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_download_title">Uploaded a file to &lt;b>%1$s&lt;/b></string>
    <string name="event_follow_title">Started following &lt;b>%1$s&lt;/b></string>
    <string name="event_fork_title">Forked &lt;b>%1$s&lt;/b></string>
    <string name="event_fork_apply_title">Applied fork commits to &lt;b>%1$s&lt;/b></string>
    <string name="event_update_gist_title">Updated gist &lt;b>%1$s&lt;/b></string>
    <string name="event_gollum_title">Edited %1$s in the wiki at &lt;b>%2$s&lt;/b></string>
    <string name="event_issue_comment">Commented on issue &lt;b>%1$d&lt;/b> in &lt;b>%2$s&lt;/b></string>
    <string name="event_pull_request_comment">Commented on pull request &lt;b>%1$d&lt;/b> in &lt;b>%2$s&lt;/b></string>
    <string name="event_issues_open_title">Opened issue &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_issues_close_title">Closed issue &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_issues_reopen_title">Reopened issue &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_member_title">Added &lt;b>%1$s&lt;/b> to &lt;b>%2$s&lt;/b></string>
    <string name="event_public_title">Open sourced &lt;b>%1$s&lt;/b></string>
    <string name="event_pr_open_title">Opened pull request &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_pr_close_title">Closed pull request &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_pr_merge_title">Merged pull request &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_pr_reopen_title">Reopened pull request &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_pr_update_title">Updated pull request &lt;b>%1$d&lt;/b> on &lt;b>%2$s&lt;/b></string>
    <string name="event_pull_request_review_comment_title">Commented on pull request &lt;b>%1$d&lt;/b> in &lt;b>%2$s&lt;/b></string>
    <string name="event_push_title">Pushed to &lt;b>%1$s&lt;/b> at &lt;b>%2$s&lt;/b></string>
    <string name="event_release_title">Created a release in &lt;b>%1$s&lt;/b></string>
    <string name="event_team_repo_add">Added the repository &lt;b>%1$s&lt;/b> to the team &lt;b>%2$s&lt;/b></string>
    <string name="event_team_user_add">Added &lt;b>%1$s&lt;/b> to the team &lt;b>%2$s&lt;/b></string>
    <string name="event_watch_title">Starred &lt;b>%1$s&lt;/b></string>
    <plurals name="page">
        <item quantity="one">a page</item>
        <item quantity="other">%1$d pages</item>
    </plurals>
    <string name="search">Search</string>
    <string name="issues_created">Created issues</string>
    <string name="issues_assigned">Assigned issues</string>
    <string name="issues_mentioned">Mentioned issues</string>
    <string name="issues_opened">Opened</string>
    <string name="issues_closed">Closed</string>
    <string name="issues_all">All</string>
    <string name="issues_state">State</string>
    <string name="menu_sort">Sort</string>
    <string name="issues_number">#%d</string>
    <string name="issues_owner_repo">%1$s/%2$s</string>
    <string name="issues_opened_at_by">opened %1$s by %2$s</string>
    <string name="issues_created_asc">Oldest</string>
    <string name="issues_created_desc">Newest</string>
    <string name="issues_updated_asc">Least recently updated</string>
    <string name="issues_updated_desc">Recently updated</string>
    <string name="issues_comments_asc">Least commented</string>
    <string name="issues_comments_desc">Most commented</string>
    <string name="repo_list_sort_created_asc">Oldest</string>
    <string name="repo_list_sort_created_desc">Newest</string>
    <string name="repo_list_sort_updated_asc">Least recently updated</string>
    <string name="repo_list_sort_updated_desc">Recently updated</string>
    <string name="repo_list_sort_full_name_asc">By name(A-Z)</string>
    <string name="repo_list_sort_full_name_desc">By name(Z-A)</string>
    <string name="fork_list_sort_newest">Newest</string>
    <string name="fork_list_sort_oldest">Oldest</string>
    <string name="fork_list_sort_stargazers">Stargazers</string>
    <string name="gist_owner_ext_divider" formatted="true">/ %s</string>
    <string name="pull_request_created">Created requests</string>
    <string name="pull_request_assigned">Assigned requests</string>
    <string name="pull_request_mentioned">Mentioned requests</string>
    <string name="dialog_subscribe">Do you want to receive notifications?</string>
    <string name="dialog_fork">Do you want to fork your own copy of %1$s to your account?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="dialog_no">No</string>
    <string name="fork_success">Succeed to fork.</string>
    <string name="fork_fail">Failed to fork.</string>
    <string name="fork_open">Open</string>
    <string name="star_success">Succeed to star.</string>
    <string name="star_fail">Fail to star.</string>
    <string name="unstar_success">Succeed to unstar.</string>
    <string name="unstar_fail">Fail to unstar.</string>
    <string name="watch_success">Succeed to watch.</string>
    <string name="watch_fail">Fail to watch.</string>
    <string name="stop_watch_success">Succeed to stop Watch.</string>
    <string name="stop_watch_fail">Fail to Stop watch.</string>
    <string name="follow_success">Succeed to follow.</string>
    <string name="follow_fail">Fail to follow.</string>
    <string name="unfollow_success">Succeed to unfollow.</string>
    <string name="unfollow_fail">Fail to unfollow.</string>
    <string name="repo_title">%1$s/%2$s</string>
    <string name="repo_updated_at">Updated at: %s</string>
    <string name="repo_language">Language: %s</string>
    <string name="repo_branch">Branch: %s</string>
    <string name="repo_issues">%1$s issues</string>
    <string name="repo_pulls">%1$s pulls</string>
    <string name="code">Code</string>
    <string name="contributors">Contributors</string>
    <string name="collaborators">Collaborators</string>
    <string name="commits">Commits</string>
    <string name="branches">Branches</string>
    <string name="stargazers">Stargazers</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>
    <string name="readme">README</string>
    <string name="issues">Issues</string>
    <string name="pulls">Pulls</string>
    <string name="zero">0</string>
    <string name="repository_root">/</string>
    <string name="pref_code_style_title">Code style</string>
    <string name="pref_settings_title">Settings</string>
    <string name="pref_settings_about">About</string>
    <string name="pref_settings_repo_page">GitHub repository</string>
    <string name="pref_code_style_default">Default</string>
    <string name="pref_code_style_agate">Agate</string>
    <string name="pref_code_style_android_studio">Android Studio</string>
    <string name="pref_code_style_arduino_light">Arduino Light</string>
    <string name="pref_code_style_arta">Arta</string>
    <string name="pref_code_style_ascetic">Ascetic</string>
    <string name="pref_code_style_atelier_dark">Atelier Dark</string>
    <string name="pref_code_style_atelier_light">Atelier Light</string>
    <string name="pref_code_style_atelier_fores">Atelier Fores</string>
    <string name="pref_code_style_dark_style">Dark Style</string>
    <string name="pref_code_style_github">Github</string>
    <string name="menu_download">Download</string>
</resources>