<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/menu_sort"
            android:icon="@drawable/ic_menu_sort"
            app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <group
                    android:checkableBehavior="single">
                <item
                        android:id="@+id/menu_repo_list_sort_full_name_desc"
                        android:title="@string/repo_list_sort_full_name_desc"/>

                <item
                        android:id="@+id/menu_repo_list_sort_full_name_asc"
                        android:checked="true"
                        android:title="@string/repo_list_sort_full_name_asc"/>

                <item
                        android:id="@+id/menu_repo_list_sort_created_desc"
                        android:title="@string/repo_list_sort_created_desc"/>

                <item
                        android:id="@+id/menu_repo_list_sort_created_asc"
                        android:title="@string/repo_list_sort_created_asc"/>

                <item
                        android:id="@+id/menu_repo_list_sort_updated_desc"
                        android:title="@string/repo_list_sort_updated_desc"/>

                <item
                        android:id="@+id/menu_repo_list_sort_updated_asc"
                        android:title="@string/repo_list_sort_updated_asc"/>
            </group>
        </menu>
    </item>

</menu>